# ap_file_server

./: .gitignore  bdata  config  config.py  filtered_arabic_jobs.json  filtered_jobs.json  generate_schema.py  initialize.py  license  main.py  migrator.exe.spec  migrator.spec  new_airlines.json  pyproject.toml  test.py
base_migration/: seeds.surql
deploy/docviewer/: index.html
deploy/docviewer/assets/: index-221DqVdb.js
docviewer/assets/: index-DF7963eM.css
initialization/: init_airlines.surql  init_airports.surql  init_jobs.surql  initialize.surql
migrations/2/: schema.surql
migrations/2026-01-04 12:51:33.222825+00:00/: schema.surql
migrations/3/: schema.surql
migrations/4/: schema.surql
migrations/5/: schema.surql
raw_data/: airline.json  airports.json  combined.json  new_airports.json
schema/: init.surql  initialization.surql  resources.surql  schema.surql
src/: deploy.py  generate_schema.py  initialize.py  main.py  migrator.py
