[project]
name = "file-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "passporteye>=2.2.2",
    "psutil>=7.2.1",
    "pyinstaller>=6.14.2",
    "python-multipart>=0.0.20",
    "surrealdb>=1.0.7",
    "uvicorn>=0.35.0",
]
